--- a/myarea/templates/navbar.html
+++ b/myarea/templates/navbar.html
@@ -1,43 +1,44 @@
-<html>
+<!--Navbar -->
+<nav class="mb-1 navbar navbar-expand-lg navbar-dark p-4" style="background-color: #4b1223;">
+    <a class="navbar-brand font-weight-bold" href="#">Neighborhood</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333" aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="{%url 'home' %} ">Home
+                    <span class="sr-only ">(current)</span>
+                </a>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link " href="{%url 'createHood' %} ">Create Hood</a>
+            </li>
 
-<body>
-    <div class="navigation container-fluid" style=" height:48px; font-family: 'Raleway', sans-serif;">
-        <div class="">
-            <div class="row">
-                <div class="col-sm-6 col-md-6">
-                    <a href="/">HOME</a>
-                </div>
-                <div class="col-sm-6 col-md-6" style="text-align:right;">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <a href="{% url 'createHood' %}">CREATE HOOD</a></i> &nbsp; &nbsp;
-                            <a href="#section1" style="color:white;" class="js-anchor-link button">DISCOVER</a>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="row">
-                                <div class="col-md-6 col-sm-6">
-                                    <a href="{%url 'profile' user_id%}">{{user.username}}</a>
-                                    <img src="https://cdn3.iconfinder.com/data/icons/internet-and-web-4/78/internt_web_technology-13-512.png" alt="" width="15%">
-                                </div>
-                                <div class="col-md-6 col-sm-6" >
-                                    {% if user.is_authenticated %}
-                                    
-                                    <a href="{% url 'logout' %}">LOGOUT</a>
+            {% if request.user.is_authenticated %}
+            <a class="nav-link" href="{% url 'logout' %} ">Logout</a> 
+            {% else %}
+            <a class="nav-link " href="{% url 'log_user' %} ">Login</a>
+            {% endif %}
+        </ul>
 
-                                    {% else %}
+        <ul class="navbar-nav ml-auto nav-flex-icons ">
+            <li class="nav-item ">
 
-                                    <a class='btn btn-default' href="{% url 'logout' %}">LOGIN /REGISTER</a>
-
-                                    {% endif %}
-                                </div>
-                            </div>
-                        </div>
+                <form class="form-inline " method="get" action="{% url 'search' %} ">
+                    {% csrf_token %}
+                    <div class=" md-form my-0 ">
+                        <input class="form-control mr-sm-5 " type="text " placeholder="Search" name="title" aria-label="Search">
                     </div>
+                </form>
+            </li>
+            {% if request.user.is_authenticated %}
+            <li>
+                <a href="{% url 'profile' user.id %}"><img src="{{request.user.profile.photo.url}}" alt="" style="width:2em; aspect-ratio:1; clip-path:circle()"></a>
+            </li>
+            {% endif %}
 
-                </div>
-            </div>
-        </div>
+        </ul>
     </div>
-</body>
-
-</html>
+</nav>
+<!--/.Navbar -->
