--- a/myarea/templates/navbar.html
+++ b/myarea/templates/navbar.html
@@ -7,19 +7,23 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{%url 'home' %} ">Home
+                <a class="nav-link" href="{%url 'index' %} ">Home
                     <span class="sr-only ">(current)</span>
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link " href="{%url 'createHood' %} ">Create Hood</a>
+                <a class="nav-link fw-bold" href="{%url 'createhood' %} ">Create Hood</a>
             </li>
 
             {% if request.user.is_authenticated %}
-            <a class="nav-link" href="{% url 'logout' %} ">Logout</a> 
+            <a class="nav-link fw-bold" href="{% url 'logout' %} ">Logout</a> 
             {% else %}
-            <a class="nav-link " href="{% url 'log_user' %} ">Login</a>
+            <a class="nav-link fw-bold" href="{% url 'login' %} ">Login</a>
             {% endif %}
+        
+            <li class="nav-item ">
+                <a class="nav-link fw-bold " href="{% url 'hoods' %}">Hoods</a>
+            </li>
         </ul>
 
         <ul class="navbar-nav ml-auto nav-flex-icons ">
