--- a/myarea/templates/auth/signup.html
+++ b/myarea/templates/auth/signup.html
@@ -16,7 +16,7 @@
                 <div class="panel-body">
 
                     <form method="POST" enctype="multipart/form-data" style="color:#4b1223;">
-                        {% csrf_token %} {% bootstrap_form form %} {% bootstrap_form profForm %}
+                        {% csrf_token %} {% bootstrap_form form %} 
                         <div class=" form-group ">
                             <input type="submit" lass="btn btn-sm" value="Sign Up " style="background-color:#4b1223; color:white;">
                         </div>
