--- a/myarea/templates/new_hood.html
+++ b/myarea/templates/new_hood.html
@@ -1,5 +1,5 @@
+{%extends "base.html"%} {% load bootstrap4 %} {% load cloudinary %}  {% block content %}
 <div class="" style="font-family: 'Jost', sans-serif;">
-    {%extends "base.html"%} {% load bootstrap4 %} {% block content %}
     <div class="container" style="font-family: 'Jost', sans-serif;">
         <div class="row">
 
