--- a/myarea/templates/navbar.html
+++ b/myarea/templates/navbar.html
@@ -1,4 +1,5 @@
 <!--Navbar -->
+{% load static %}
 <nav class="mb-1 navbar navbar-expand-lg navbar-dark p-4" style="background-color: #4b1223;">
     <a class="navbar-brand font-weight-bold" href="#">Neighborhood</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333" aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +39,16 @@
             </li>
             {% if request.user.is_authenticated %}
             <li>
-                <a href="{% url 'profile' user.id %}"><img src="{{request.user.profile.photo.url}}" alt="" style="width:2em; aspect-ratio:1; clip-path:circle()"></a>
+            
+                <a href="{% url 'profile' request.user.id %}">
+                    {% if request.user.profile.profile_picture %}
+                    <img src="{{request.user.profile.profile_picture.url}}" alt="" style="width:2em; aspect-ratio:1; clip-path:circle()">
+                    {% else %}
+                  
+                    <img src="{% static '/images/avatar.png'%}" alt="profile" style="width:2em; aspect-ratio:1; clip-path:circle()">
+
+                    {% endif %}
+                </a>
             </li>
             {% endif %}
 
