--- a/myarea/templates/new_post.html
+++ b/myarea/templates/new_post.html
@@ -8,7 +8,7 @@
   {{form.media}}
 
   <div class="container" style="padding-top:60px;">
-    <form action="{%url 'newpost'%}" method="post" enctype="multipart/form-data">
+    <form action="" method="post" enctype="multipart/form-data">
       {%csrf_token%}
 
       {% bootstrap_form form%}
