--- a/myarea/templates/index.html
+++ b/myarea/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {%load bootstrap4%}
+{% load static %}
 {% block content%}
 
 
@@ -15,7 +16,7 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="/static/images/devices@2x.png" alt="" class="img-responsive" width="100%">
+                            <img src="{% static '/images/katani-3.jpeg' %}" alt="" class="img-responsive" width="100%">
                         </div>
 
                     </div>
