--- a/myarea/templates/search.html
+++ b/myarea/templates/search.html
@@ -3,7 +3,7 @@
 {% block content%}
     <div class="container">
 		<div class="row">
-		  <h3>Search results for the search term: <strong>{{message}}</strong></h3>
+		
 
 		  {%if hoods%}
 		  	{% for hood in hoods %}
@@ -20,7 +20,7 @@
 		{%endfor%}
 		{% else %}
 		<div class="col-md-6">
-				<h4 class="text-center">No neighbourhood with the name <strong>{{message}}</strong> exists! You can however create it <a href="{% url 'createHood' %}">here</a></h4>
+				<h4 class="text-center">No neighbourhood with that name exists! You can however create it <a href="{% url 'createhood' %}">here</a></h4>
 			</div>
 		{%endif%}
 	</div>
